--- a/PRA/css/styles.css
+++ b/PRA/css/styles.css
@@ -12,7 +12,7 @@ body {
 }
 
 /* Hover for links*/
-a:hover {
+.link:hover {
   color: black !important;
   text-decoration: none;
 }
@@ -63,7 +63,7 @@ a:hover {
 }
 
 .glow-on-hover:hover {
-  color: white;
+  color: white !important;
 }
 
 .glow-on-hover:active:after {
@@ -528,6 +528,10 @@ footer .social-icons i {
   padding: 10px;
 }
 
+footer .social-icons a {
+  text-decoration: none;
+}
+
 footer .email-newsletter form {
   display: flex;
   flex-direction: column;
@@ -554,4 +558,34 @@ footer .email-newsletter form button {
 footer .email-newsletter form button:hover {
   background-color: #323639;
   color: #829da2;
+}
+
+/* -------------------- Hover for Social Icons -------------------------- */
+
+.social-icons:hover i {
+  color: white;
+}
+
+.social-icons:hover i.fa-brands.fa-dribbble {
+  background-color: #ea4c89;
+}
+
+.social-icons:hover i.fa-brands.fa-square-facebook {
+  background-color: #3b5998;
+}
+
+.social-icons:hover i.fa-brands.fa-google-plus-g {
+  background-color: #db4a39;
+}
+
+.social-icons:hover i.fa-brands.fa-linkedin {
+  background-color: #0e76a8;
+}
+
+.social-icons:hover i.fa-brands.fa-twitter {
+  background-color: #00acee;
+}
+
+.social-icons:hover i.fa-brands.fa-vk {
+  background-color: #4e658e;
 }
