--- a/PRA/css/web-design_styles.css
+++ b/PRA/css/web-design_styles.css
@@ -1,1 +1,86 @@
+main {
+  display: flex;
+  margin: 20px;
+}
+
+article {
+  flex: 3;
+  margin-right: 20px;
+}
+
+aside {
+  flex: 1;
+  padding-left: 15px;
+  border-left: 1px solid #c1c2c4;
+}
+
+aside h2,
+aside h3 {
+  margin-bottom: 0.5em;
+}
+
+aside ul {
+  list-style-type: none;
+  padding: 0;
+  margin-bottom: 1em;
+}
+
+aside ul li a {
+  text-decoration: none;
+  color: #333;
+  padding: 2px 0;
+  display: block;
+}
+
+aside .explore-button-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.explore-button {
+  text-decoration: none;
+  background-color: #474747;
+  color: white;
+  padding: 10px 15px;
+  border-radius: 5px;
+  text-align: center;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s;
+}
+
+.explore-button:hover {
+  background-color: #555;
+}
+
 /* ------------------------- Section ----------------------- */
+#presentation {
+  background: url("../materials/images/inner_header.jpg") no-repeat;
+  background-size: cover;
+  height: 12rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  line-height: 60px;
+  font-weight: 100;
+  margin-top: 70px;
+}
+
+#presentation .principal {
+  background-color: rgba(103, 103, 103, 60%);
+  border-radius: 8px;
+  padding: 1vw;
+  width: 30vw;
+  color: white;
+  font-family: "Yellowtail", sans-serif;
+  font-size: 30px;
+  margin-top: 30px;
+  height: 150px;
+}
+
+#presentation .principal p {
+  font-size: 24px;
+  font-family: "Nunito Sans", sans-serif;
+  margin-top: 5px;
+}
