--- a/PRA/css/web-design_styles.css
+++ b/PRA/css/web-design_styles.css
@@ -1,3 +1,8 @@
+img {
+  float: left;
+  margin-right: 10px;
+}
+
 main {
   display: flex;
   margin: 20px;
@@ -53,7 +58,8 @@ aside .explore-button-container {
   background-color: #555;
 }
 
-/* ------------------------- Section ----------------------- */
+/* ------------------------- Section Presentation ----------------------- */
+
 #presentation {
   background: url("../materials/images/inner_header.jpg") no-repeat;
   background-size: cover;
@@ -83,4 +89,171 @@ aside .explore-button-container {
   font-size: 24px;
   font-family: "Nunito Sans", sans-serif;
   margin-top: 5px;
+}
+
+/* ------------------------- Section Web Design ----------------------- */
+
+#web-design .section-header {
+  line-height: 40px;
+}
+
+#web-design .content-container {
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+
+#web-design .section-img {
+  float: right;
+  margin-left: 20px;
+  width: 50%;
+  margin-bottom: 60px;
+}
+
+#web-design .section-text {
+  margin: 40px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+#web-design .section-image-text p {
+  padding-bottom: 15px;
+  padding-right: 10px;
+}
+
+#web-design .section-img img {
+  width: 100%;
+  height: auto;
+}
+
+#web-design .image-caption {
+  text-align: right;
+  text-transform: uppercase;
+  color: #c43721;
+  font-weight: bold;
+}
+
+#web-design ul {
+  list-style-image: url("../materials/fontawesome-free/");
+}
+
+#web-design .review-content {
+  display: flex;
+  align-items: center;
+  background-color: #fff6f5;
+  width: 80%;
+  border-left: #c43721 solid 5px;
+  color: #c43721;
+  height: 100px;
+  margin: 0 auto;
+}
+
+#web-design .review-content p:first-child {
+  font-size: 100px;
+
+  margin: 0 auto;
+  font-style: italic;
+}
+
+#web-design .review-content p:last-child {
+  font-size: 17px;
+  width: 80%;
+  margin: 0 auto;
+  font-style: italic;
+}
+
+#web-design .section-list {
+  margin-left: 50px;
+}
+
+/* ------------------------- Section Comments ----------------------- */
+
+#comments h3 {
+  font-size: 40px;
+  margin-bottom: 20px;
+}
+
+#comments .section-comments {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 50px;
+}
+
+#comments .comment-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+  background-color: #e4e4e4;
+  padding: 20px 20px 60px 20px;
+}
+
+#comments .comment-data {
+  display: flex;
+  justify-content: space-between;
+}
+
+#comments .comment-data img {
+  border: #333 1px solid;
+  padding: 5px;
+  width: 40px;
+  height: 40px;
+}
+
+#comments .date-data {
+  margin-top: 5px;
+  font-size: 15px;
+}
+
+#comments .text-data {
+  margin: 0px 20px 0px 20px;
+}
+
+/* ------------------------- Section Form ----------------------- */
+
+#form h3 {
+  font-size: 40px;
+  margin-bottom: 20px;
+}
+
+#form form {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
+}
+
+#form input,
+select {
+  height: 50px;
+}
+
+#form .group-inputs-flex {
+  display: flex;
+  gap: 10px;
+}
+
+#form .label-flex {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+#form .label-flex select {
+  display: flex;
+  flex-direction: column;
+  width: 45%;
+}
+
+#form .btn {
+  display: flex;
+  gap: 10px;
+}
+
+#form .btn button {
+  width: 100%;
+  border: #333 solid 2px;
+  background: none;
+  height: 50px;
 }
