--- a/PRA/css/web-design_styles.css
+++ b/PRA/css/web-design_styles.css
@@ -9,53 +9,9 @@ main {
 }
 
 article {
-  flex: 3.2;
-  margin-right: 20px;
-}
-
-aside {
-  flex: 1;
-  padding-left: 15px;
-  border-left: 1px solid #c1c2c4;
-}
-
-aside h2,
-aside h3 {
-  margin-bottom: 0.5em;
-}
-
-aside ul {
-  list-style-type: none;
-  padding: 0;
-  margin-bottom: 1em;
-}
-
-aside ul li a {
-  text-decoration: none;
-  color: #333;
-  padding: 2px 0;
-  display: block;
-}
-
-aside .explore-button-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-}
-
-.explore-button {
-  text-decoration: none;
-  background-color: #474747;
-  color: white;
-  padding: 10px 15px;
-  border-radius: 5px;
-  text-align: center;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  transition: background-color 0.3s;
-}
-
-.explore-button:hover {
-  background-color: #555;
+  flex: 3.6;
+  margin-right: 25px;
+  padding-top: 60px;
 }
 
 /* ------------------------- Section Presentation ----------------------- */
@@ -63,6 +19,7 @@ aside .explore-button-container {
 #presentation {
   background: url("../materials/images/inner_header.jpg") no-repeat;
   background-size: cover;
+  background-attachment: fixed;
   height: 12rem;
   display: flex;
   flex-direction: column;
@@ -105,7 +62,7 @@ aside .explore-button-container {
 #web-design .section-img {
   float: right;
   margin-left: 20px;
-  width: 50%;
+  width: 51%;
   margin-bottom: 40px;
 }
 
@@ -256,4 +213,83 @@ select {
   border: #333 solid 2px;
   background: none;
   height: 50px;
+}
+
+/* ------------------------- ASIDE ----------------------- */
+aside {
+  flex: 1;
+  padding-left: 15px;
+  border-left: 1px solid #c1c2c4;
+}
+
+aside h2 {
+  margin-bottom: 0.5em;
+}
+
+aside h3 {
+  margin-bottom: 0.5em;
+  font-size: 16px;
+  padding-bottom: 15px;
+}
+
+aside .aside-list:nth-of-type(2) h3 {
+  margin-top: 40px;
+}
+
+aside .aside-buttons {
+  margin-top: 40px;
+}
+
+aside ul {
+  list-style-type: disc;
+  padding-left: 16px;
+  margin-bottom: 1em;
+}
+
+aside ul li a {
+  color: #333;
+  padding: 2px 0;
+  display: block;
+}
+
+ul.custom-bullets {
+  list-style: none;
+  padding-left: 0;
+}
+
+ul.custom-bullets li {
+  position: relative;
+  padding-left: 15px;
+}
+
+ul.custom-bullets li::before {
+  content: "•";
+  position: absolute;
+  left: 0;
+  top: 8px;
+  font-size: 10px;
+  line-height: 1;
+  color: black;
+}
+
+aside .explore-button-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+aside .explore-button {
+  text-decoration: none;
+  background-color: #474747;
+  color: white;
+  padding: 10px 25px;
+  border-radius: 5px;
+  text-align: center;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s;
+  margin: 0 5px;
+}
+
+aside .explore-button:hover {
+  background-color: #555;
 }
