--- a/PRA/css/web-design_styles.css
+++ b/PRA/css/web-design_styles.css
@@ -84,6 +84,25 @@ article {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
+#web-design .section-list li {
+  position: relative;
+  list-style-type: none;
+  padding-left: 30px;
+}
+
+#web-design .section-list li::before {
+  content: " ";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 20px;
+  width: 20px;
+  background-image: url("/PRA/materials/images/lamp-icon.png");
+  background-size: 25px 22px;
+  background-repeat: no-repeat;
+}
+
 #web-design .image-caption {
   text-align: right;
   text-transform: uppercase;
@@ -174,21 +193,46 @@ article {
   margin-bottom: 20px;
 }
 
+#form label {
+  margin-bottom: 10px;
+}
+
+#form b {
+  color: #c43721;
+  font-size: 1.4rem;
+}
+
 #form form {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
 }
 
-#form input,
-select {
+#form input {
   height: 50px;
+  padding: 0px 0px 0px 20px;
+  border: #333 solid 1px;
+}
+
+#form input:focus,
+#form textarea:focus,
+#form select:focus {
+  outline: none;
+  border: 1px solid red;
+}
+
+#form select,
+textarea {
+  height: 50px;
+  padding: 15px 0px 0px 20px;
+  border: #333 solid 1px;
 }
 
 #form .group-inputs-flex {
   display: flex;
-  gap: 10px;
+  justify-content: center;
+  gap: 30px;
 }
 
 #form .label-flex {
@@ -200,19 +244,47 @@ select {
 #form .label-flex select {
   display: flex;
   flex-direction: column;
-  width: 45%;
+  width: 100%;
+}
+
+#form .label-flex #image {
+  border: #333 solid 1px;
+  background: none;
+  height: 50px;
+  box-sizing: border-box;
+  width: 100%;
+  padding-top: 15px;
+}
+
+#form textarea {
+  resize: none;
+  height: 250px;
 }
 
 #form .btn {
   display: flex;
-  gap: 10px;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 20px;
 }
 
 #form .btn button {
   width: 100%;
-  border: #333 solid 2px;
+  border: #333 solid 1px;
   background: none;
   height: 50px;
+}
+
+#form .btn button:hover {
+  background-color: #189232;
+  border: 1px solid #189232;
+  color: white;
+}
+
+#form .btn button:last-child:hover {
+  background-color: #ff0000;
+  border: 1px solid #ff0000;
+  color: white;
 }
 
 /* ------------------------- ASIDE ----------------------- */
@@ -291,5 +363,5 @@ aside .explore-button {
 }
 
 aside .explore-button:hover {
-  background-color: #555;
+  background-color: #c43721;
 }
